--- a/Haithon.cabal
+++ b/Haithon.cabal
@@ -17,9 +17,9 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:     
+  exposed-modules:     Text.Haithon.Parser
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.8
-  -- hs-source-dirs:      
+  build-depends:       base >=4.6 && <4.8, parsec >=3.1.7, indents >=0.3.3, mtl>=2.1.3.1
+  hs-source-dirs:      src
   default-language:    Haskell2010
