--- a/Haithon.cabal
+++ b/Haithon.cabal
@@ -18,7 +18,8 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Text.Haithon.Parser,
-                       Text.Haithon.Tokens
+                       Text.Haithon.Tokens,
+                       Text.Haithon.Expressions
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.9,
