--- a/Haithon.cabal
+++ b/Haithon.cabal
@@ -19,12 +19,28 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Text.Haithon.Parser,
                        Text.Haithon.Tokens,
-                       Text.Haithon.Expressions
+                       Text.Haithon.Expressions,
+                       Text.Haithon.ParserTypes
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.9,
-                       parsec >=3.1.7,
-                       indents >=0.3.3,
-                       mtl>=2.1.3.1
+  build-depends:       base >=4.6 && <4.9
+                     , indents >=0.3.3
+                     , mtl>=2.1.3.1
+                     , parsec >=3.1.9
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+
+test-suite tests
+  main-is:           Main.hs
+  hs-source-dirs:    tests
+  type:              exitcode-stdio-1.0
+  build-depends:     base >=4.6 && <4.9
+                   , HUnit >= 1.2.5.2
+                   , Haithon
+                   , parsec >=3.1.9
+                   , indents >=0.3.3
+                   , test-framework >= 0.8.1.1 && <0.9
+                   , test-framework-hunit >= 0.3.0.1 && <0.4
+                   , HUnit >= 1.2.5.2 && <1.4
+  default-language:  Haskell2010
